<resources>
    <string name="app_name">BaseModule</string>
    <string name="hint_login_input_empty">用户名和密码不能为空</string>
    <string name="hint_input_phone_error">输入的手机号码不正确</string>
    <string name="login_id_or_passwd_error">用户名或者密码错误</string>
    <string name="login_error_try_again">登录失败，请重试</string>
    <string name="hint_input_empty">输入内容不能为空</string>
    <string name="hint_passowrd_too_short">密码长度不能小于6位</string>
    <string name="hint_input_different">两次密码输入不一致</string>
    <string name="hint_net_error">网络请求失败，请检查网络后重试</string>
    <string name="hint_phone_input_empty">手机号码不能为空</string>
    <string name="hint_code_input_empty">验证码不能为空</string>
    <string name="hint_password_input_empty">密码不能为空</string>
    <string name="file_unsupport">文件暂不支持本地查看，请使用其他应用打开</string>
    <string name="loading">正在加载中，请稍候</string>
    <string name="open_with_other_app">使用其他应用打开</string>
    <string name="hint_download_fail">下载失败，请重试</string>
    <string name="regist_account">立即注册</string>
    <string name="hint_login_success">登录成功</string>
    <string name="formal_enviroment">正式环境</string>
    <string name="test_enviroment">测试环境</string>
    <string name="select_enviroment">选择环境</string>
    <string name="now_enviroment">当前环境:</string>
    <string name="self_enviroment">自定义环境</string>

</resources>
