<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basicapi.activity.EnvironmentSelectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/select_enviroment"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/now_enviroment"
                    android:textColor="@color/colorFF31B5F2"/>

                <TextView
                    android:id="@+id/tv_now_enviroment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:maxLines="2"
                    android:paddingLeft="12dp"
                    android:text=""
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/et_enviroment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_edit_select_environment"
                android:padding="4dp"
                android:textColor="@color/colorFB979694"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/tv_formal_enviroment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="12dp"
                android:text="@string/formal_enviroment"
                android:textColor="@color/colorFF31B5F2"/>

            <TextView
                android:id="@+id/tv_test_enviroment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/test_enviroment"
                android:textColor="@color/colorFF31B5F2"/>

            <TextView
                android:id="@+id/tv_self_enviroment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/self_enviroment"
                android:textColor="@color/colorFF31B5F2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="取消"
                    android:textColor="@color/colorFF31B5F2"/>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="确定"
                    android:textColor="@color/colorFF31B5F2"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
